// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Table BadExperience {
    id INTEGER [primary key]
    rental_id INTEGER 
    driver_id INTEGER 
    description TEXT 
    occurred_datetime TEXT 
    notification_datetime TEXT 
    }

Table Person {
    id INTEGER [primary key]
    first_name TEXT 
    last_name TEXT 
    email TEXT 
    birth_date TEXT 
    driver_license_number TEXT 
    driver_license_expiry TEXT 
    sys_config_id INTEGER 
    min_driver_age INTEGER 
    bad_experience_bar_threshold INTEGER 
    bad_experience_count INTEGER 
    is_qualified INTEGER 
    is_barred INTEGER 
    }

Table Rental {
    id INTEGER [primary key]
    renter_id INTEGER 
    pickup_branch_id INTEGER 
    return_branch_id INTEGER 
    car_group_id INTEGER 
    car_id INTEGER 
    scheduled_pickup_datetime TEXT 
    scheduled_return_datetime TEXT 
    actual_pickup_datetime TEXT 
    actual_return_datetime TEXT 
    drop_off_branch_id INTEGER 
    status TEXT 
    credit_card_name TEXT 
    fuel_level_at_pickup TEXT 
    sys_config_id INTEGER 
    max_rental_days INTEGER 
    max_additional_drivers INTEGER 
    grace_period_hours INTEGER 
    location_penalty_amount NUMERIC(10, 2) 
    additional_driver_count INTEGER 
    barred_driver_count INTEGER 
    rental_duration_days INTEGER 
    base_rental_cost NUMERIC(10, 2) 
    late_return_charge NUMERIC(10, 2) 
    location_penalty_charge NUMERIC(10, 2) 
    total_additional_charges NUMERIC(10, 2) 
    rental_price NUMERIC(10, 2) 
    }

Table Branch {
    id INTEGER [primary key]
    name TEXT 
    branch_type TEXT 
    local_area_id INTEGER 
    car_storage_capacity INTEGER 
    is_eu_rent_owned INTEGER 
    }

Table LocalArea {
    id INTEGER [primary key]
    name TEXT 
    operating_company_id INTEGER 
    }

Table Car {
    id INTEGER [primary key]
    vin TEXT 
    car_model_id INTEGER 
    local_area_id INTEGER 
    branch_id INTEGER 
    odometer_reading INTEGER 
    service_mileage INTEGER 
    fuel_level TEXT 
    }

Table CarModel {
    id INTEGER [primary key]
    name TEXT 
    car_manufacturer_id INTEGER 
    car_group_id INTEGER 
    body_style TEXT 
    fuel_type TEXT 
    passenger_capacity INTEGER 
    }

Table CarGroup {
    id INTEGER [primary key]
    name TEXT 
    passenger_capacity INTEGER 
    large_suitcase_capacity INTEGER 
    small_suitcase_capacity INTEGER 
    rental_hour_rate NUMERIC(10, 2) 
    rental_day_rate NUMERIC(10, 2) 
    rental_week_rate NUMERIC(10, 2) 
    }

Table CarManufacturer {
    id INTEGER [primary key]
    name TEXT 
    }

Table Country {
    id INTEGER [primary key]
    name TEXT 
    iso_code TEXT 
    }

Table OperatingCompany {
    id INTEGER [primary key]
    name TEXT 
    country_id INTEGER 
    }

Table SysConfig {
    id INTEGER [primary key]
    name TEXT 
    discount_rate FLOAT 
    tax_rate FLOAT 
    notes TEXT 
    max_rental_days INTEGER 
    max_additional_drivers INTEGER 
    min_driver_age INTEGER 
    grace_period_hours INTEGER 
    bad_experience_bar_threshold INTEGER 
    location_penalty_amount NUMERIC(10, 2) 
    }

Table RentalDriver {
    id INTEGER [primary key]
    rental_id INTEGER 
    person_id INTEGER 
    is_renter INTEGER 
    }



// Relationships
    Ref: BadExperience.(driver_id) > Person.(id)
    Ref: BadExperience.(rental_id) > Rental.(id)
    Ref: Person.(sys_config_id) > SysConfig.(id)
    Ref: Rental.(car_group_id) > CarGroup.(id)
    Ref: Rental.(car_id) > Car.(id)
    Ref: Rental.(drop_off_branch_id) > Branch.(id)
    Ref: Rental.(pickup_branch_id) > Branch.(id)
    Ref: Rental.(renter_id) > Person.(id)
    Ref: Rental.(return_branch_id) > Branch.(id)
    Ref: Rental.(sys_config_id) > SysConfig.(id)
    Ref: Branch.(local_area_id) > LocalArea.(id)
    Ref: LocalArea.(operating_company_id) > OperatingCompany.(id)
    Ref: Car.(branch_id) > Branch.(id)
    Ref: Car.(car_model_id) > CarModel.(id)
    Ref: Car.(local_area_id) > LocalArea.(id)
    Ref: CarModel.(car_group_id) > CarGroup.(id)
    Ref: CarModel.(car_manufacturer_id) > CarManufacturer.(id)
    Ref: OperatingCompany.(country_id) > Country.(id)
    Ref: RentalDriver.(person_id) > Person.(id)
    Ref: RentalDriver.(rental_id) > Rental.(id)
